Arreglos y Fixes. OJO con el controller de contenido con el getLink. Puse cualquier batata ahi.

--- a/public/assets-ref/css/sceditor/sceditor-main.css
+++ b/public/assets-ref/css/sceditor/sceditor-main.css
@@ -245,7 +245,7 @@ div.sceditor-toolbar{
 
 div.sceditor-group{
 	display:inline-block;
-	background:#FFF;
+	/*background:#FFF;*/
 	margin:1px 5px 1px 0;
 	/*padding:1px;*/
 	/*border:1px solid #aaa;*/
