--- a/views/ref/admin/indexAdmin.twig
+++ b/views/ref/admin/indexAdmin.twig
@@ -1,7 +1,7 @@
 {% extends "ref/side-master.twig" %}
 
 {# ----------------------------------------------------------- #} {% block titulo %}Administración{% endblock %} {% block body %}
-<div class="container-fluid" style="">
+<div class="container-fluid" style="margin-top:10px">
     <div class="row">
         <div class="col-xs-12 col-md-10 col-lg-8">
                 <div class="well">
