--- a/views/ref/contenido/derecho/crear.twig
+++ b/views/ref/contenido/derecho/crear.twig
@@ -28,14 +28,14 @@
 					<textarea name="descripcion"></textarea>
 				</div>
 				<hr>
-				<h3>Sub-Ejes</h3>
-				<p class="text-muted">Aqui se listan los sub-ejes del eje general. En lo posible, intentar que sean los mas definitivos posibles.</p>
+				<h3>Preguntas orientadoras</h3>
+				<p class="text-muted">Aqui se listan las preguntas orientadoras del eje general. En lo posible, intentar que sean los mas definitivos posibles.</p>
 				<ul class="list-group lista-acciones">
 					<li class="list-group-item accion-container">
 						<textarea name="cuerpo" class="accion form-control" rows="2" placeholder="Describa el eje"></textarea>
 					</li>
 				</ul>
-				<a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>
+				<!--<a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>-->
 				<hr>
 				<input type="text" name="secciones" value="" hidden>
             <input type="text" name="categoria" value="1" hidden>
