--- a/public/assets-ref/scss/virtuagora-ref.scss
+++ b/public/assets-ref/scss/virtuagora-ref.scss
@@ -224,9 +224,18 @@ http://ryanfait.com/
 
 // ====================================
 header.titulo {
-  padding:40px 20px 20px;
+    padding:140px 0 0;
+    img.medios{
+      padding-top:15px;
+    }
+  @media (min-width: 768px) {
+  padding:40px 0 0;
+  img.medios{
+    padding-top:50px
+  }
+  }
   background-color: #80cbfc;
-  height: 470px;
+  
 }
 p{
   font-size: 16px;
@@ -253,6 +262,12 @@ p{
     p{
       margin: 0;
     }
+    h1.grande{
+      font-size:40px;
+    @media (min-width: 768px) {
+      font-size:50px;
+    }  
+  }
 }
 
   .ejeIntro{
