--- a/views/ref/side-master-user.twig
+++ b/views/ref/side-master-user.twig
@@ -32,6 +32,14 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 	<div id="wrapper">
 		{% include 'ref/menu-side-user.twig' %}
 		<div id="page-content-wrapper">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-xs-12 col-md-10 col-lg-8">
+
+			<a href="#menu-toggle" class="btn btn-default bt-xs" id="menu-toggle"><i class="fa fa-bars fa-fw fa-lg"></i>Menu</a>
+					</div>
+				</div>
+			</div>
 		{% block body %}{% endblock %}
 		</div>
 	</div>
@@ -88,6 +96,10 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 				$('#modal-warning').modal('show');
 			{% endif %}
 		});
+		 $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });	
 		</script>
 	<!--=======================-->
 	{% block scripts %}{% endblock %}
