--- a/public/assets-ref/scss/virtuagora-ref.scss
+++ b/public/assets-ref/scss/virtuagora-ref.scss
@@ -61,7 +61,7 @@ http://ryanfait.com/
   color: white;
   height:auto;
   img{
-    height:100px;
+    height:45px;
   }
   &.blanco{
     display:none;
@@ -375,3 +375,105 @@ h6 {
 }
 
 
+.eje-container{
+  padding: 30px;
+  &.eje1{background-color:#bfe0ff}
+  &.eje2{background-color:#e5dd95}
+  &.eje3{background-color:#ffcfcf}
+  &.eje4{background-color:#dee9a5}
+  &.eje5{background-color:#a5e8d7}
+  &.eje6{background-color:#a5dae8}
+  &.eje7{background-color:#bfd3f6}
+  &.eje8{background-color:#cac2f1}
+  span.red{
+    color: #c10000;
+  }
+  span.white{
+    color: #FFF;
+  }
+  .descripcion-content{
+    font: 16px/20px 'Open Sans', Arial, Helvetica, sans-serif;
+  line-height: 1.3;
+  }
+  .preguntas-container{
+    background-color: #FFF;
+  }
+  table.preguntas{
+    border:0;
+    td{
+      border:0;
+    
+    }
+    td:first-child{
+      background-color: #FFF;
+        border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    padding: 20px;
+    }
+    td:last-child{
+        font-family: "Raleway";
+    font-weight: 700;
+      background-color: #c40202;
+    color: #FFF;
+    font-size:20px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    vertical-align: middle;
+    text-align: center;
+    cursor:pointer;
+    a{
+      color:#FFF;
+      &:hover{
+        text-decoration: none;
+      }
+    }
+    }
+  }
+}
+
+#listaComentarios{
+  .comentario-container{
+   img{
+     margin-right:10px;
+     width: 32px;
+   }
+ }
+ textarea{
+   font-size:12px;
+   resize:none;  
+ }
+ textarea.respuesta{
+   font-size:11px;
+   margin-bottom:5px;
+ }
+ .media-body .respuesta{
+   font-size:12px;
+ }
+}
+
+
+.grid-sizer,
+.grid-item {
+        margin: 15px 1%;
+    @media (max-width: $screen-xs-max) {
+        width: 100%;
+    }
+    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+        width: 48%;
+    }
+    @media (min-width: $screen-md-min) {
+        width: 23%;
+    }
+    //&.w2 {
+    //    @media (min-width: $screen-md-min) {
+    //        width: 75%;
+    //    }
+    //}
+}
+
+
+/* 2 columns */
+
+.grid-item--width2 {
+    width: 20%;
+}
