Ahora si se ven bien las secciones.

--- a/views/ref/contenido/derecho/crear.twig
+++ b/views/ref/contenido/derecho/crear.twig
@@ -35,7 +35,7 @@
 						<textarea name="cuerpo" class="accion form-control" rows="2" placeholder="Describa el eje"></textarea>
 					</li>
 				</ul>
-				<!--<a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>-->
+				<a id="nuevaAccion" href="javascript:void(0)" class="btn btn-sm btn-info btn-block"><i class="mdi mdi-plus"></i> Agregar una acción</a>
 				<hr>
 				<input type="text" name="secciones" value="" hidden>
             <input type="text" name="categoria" value="1" hidden>
