Agregada accion del boton participar y algunos pequeños fixes y agregado el eliminar de respuesta

--- a/views/ref/menu-side-user.twig
+++ b/views/ref/menu-side-user.twig
@@ -25,7 +25,7 @@
 		</li>
 		<hr>
 		<li>
-			<span style="color:#FFF"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" style="width:32px; border-radius:20px;margin-right:5px;" alt=""> {{user.nombre}} {{user.apellido}}</span> <span style="color: #efb101"><i class="fa fa-check fa-fw" style="display:inline;"></i></span>
+			<span style="color:#FFF"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" style="width:32px; border-radius:20px;margin-right:5px;" alt=""> {{user.nombre}} {{user.apellido}}</span>
 		</li>
 	</ul>
 </div>
