--- a/views/ref/contenido/derecho/ver.twig
+++ b/views/ref/contenido/derecho/ver.twig
@@ -61,7 +61,7 @@
 						<form action="{{ urlFor('runComentar', {'tipoRaiz': 'seccion' , 'idRaiz': 1}) }}" method="POST">
 							<strong>{{ user.nombre }} {{ user.apellido}}</strong><br>
 							<small class="text-muted">Deje su comentario</small>
-							<textarea name="cuerpo" class="form-control" rows="2" style=""></textarea>
+							<textarea id="dejarComentario" name="cuerpo" class="form-control" rows="2" style=""></textarea>
 							<br>
 							<div class="pull-right">
 								<button type="submit" class="btn btn-xs btn-success"><i class="fa fa-thumbs-up fa-fw"></i> Enviar</button>
@@ -70,7 +70,7 @@
 						{% else %}
 						<strong>Usuario anonimo</strong><br>
 						<small class="text-primary">Debe<strong><a href="#"><i class="fa fa-sign-in fa-fw"></i>INICIAR SESION</a></strong> para poder comentar</small>
-						<textarea name="comentario" class="form-control disabled" id="" rows="2" style="" disabled></textarea>
+						<textarea id="dejarComentario" name="comentario" class="form-control disabled" id="" rows="2" style="" disabled></textarea>
 						<br>
 						<div class="pull-right">
 							<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-primary"><i class="fa fa-sign-in fa-fw"></i> Iniciar sesión</a>
@@ -95,21 +95,22 @@
 								<img alt="image" class="img-circle" src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}">
 							</a>
 							<div class="media-body ">
-								<strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong> hizo un comentario<br>
+								<strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong> hizo un comentario
+								{% if user and (user.es_moderador) %}
+									<a href="javascript:eliminarComentario({{comentario.id}})" class="btn btn-xs btn-warning pull-right" style="margin-left:5px;" data-toggle="tooltip" data-placement="bottom" data-original-title="Eliminar" ><i class="fa fa-times"></i></a>
+									{% endif %}
+								<br>
 								<small class="text-muted">{{ comentario.created_at|date("d-M-Y") }}</small>
 								<div class="well well-sm" style="margin-top:5px; margin-bottom:5px;">
 									{{ comentario.cuerpo|nl2br }}
 								</div>
 								<div class="text-right" style="margin-top:3px;">
 									{% if user is not empty %}
-									<a href="javascript:votarComentario({{comentario.id}},1)" class="btn btn-xs btn-primary" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{comentario.karma}}</b>	</a>
+									<a href="javascript:votarComentario({{comentario.id}},1)" class="btn btn-xs btn-primary" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{comentario.karma}}</b></a>
 									<a href="javascript:votarComentario({{comentario.id}},-1)" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>									
 									<a href="javascript:verBoxResponder({{comentario.id}})" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="Responder" ><i class="fa fa-reply"></i> <b>{{comentario.respuestas|length}}</b></a>
-									{% if user and (user.es_moderador) %}
-									<a href="javascript:eliminarComentario({{comentario.id}})" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="bottom" data-original-title="Eliminar" ><i class="fa fa-times"></i></a>
-									{% endif %}
 									{% else %}
-<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-primary" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{comentario.karma}}</b> Me gusta</a>
+<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-primary" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{comentario.karma}}</b></a>
 									<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>									
 									<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="Responder" ><i class="fa fa-reply"></i> <b>{{comentario.respuestas|length}}</b></a>
 									{% endif %}
@@ -134,22 +135,25 @@
 							</form>
 						{% if comentario.respuestas|length > 0 %}
             {% for respuesta in comentario.respuestas %}
-							<div class="comentario-container">
+							<div class="comentario-container" style="margin-bottom:10px;">
 								<a href="{{ urlFor('shwUsuario',{'idUsu': respuesta.autor.id}) }}" class="pull-left">
 									<img alt="image" class="img-circle" src="{{ avatarUrl(respuesta.autor.img_tipo, respuesta.autor.img_hash, 32) }}" style="width:20px;">
 								</a>
 								<div class="media-body">
-										<strong>{{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong><i> <span class="respuesta">{{ respuesta.cuerpo|nl2br }}</span></i>
-										<br>
-										<div class="pull-right" style="margin-top:4px;">
+										<div class="btn-group-vertical btn-group-xs pull-right" style="margin-left: 5px;">
 											{% if user is not empty %}
-									<a href="javascript:votarComentario({{respuesta.id}},1)" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{respuesta.karma}}</b></a>
-									<a href="javascript:votarComentario({{respuesta.id}},-1)" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>									
+											{% if user and (user.es_moderador) %}
+									<a href="javascript:eliminarComentario({{respuesta.id}})" class="btn btn-warning"><i class="fa fa-times"></i></a>
+									{% endif %}
+									<a href="javascript:votarComentario({{respuesta.id}},1)" class="btn btn-default" ><i class="fa fa-thumbs-up"></i> <b>{{respuesta.karma}}</b></a>
+									<a href="javascript:votarComentario({{respuesta.id}},-1)" class="btn btn-default"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>		
 									{% else %}
-<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{respuesta.karma}}</b></a>
-									<a href="{{urlFor('shwLogin')}}" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>									
+<a href="{{urlFor('shwLogin')}}" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="Me gusta"><i class="fa fa-thumbs-up"></i> <b>{{respuesta.karma}}</b></a>
+									<a href="{{urlFor('shwLogin')}}" class="btn btn-default" data-toggle="tooltip" data-placement="bottom" data-original-title="No me gusta"><i class="fa fa-thumbs-up fa-flip-vertical fa-flip-horizontal"></i></a>									
 									{% endif %}
 											</div>
+									
+										<strong>{{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong><i> <span class="respuesta">{{ respuesta.cuerpo|nl2br }}</span></i>
 								</div>
 							</div>
 						{% endfor %}
@@ -208,8 +212,11 @@
 });
 
 $('td.toggle-comentarios').click(function(){ 
-            $('#listaComentarios').show(150);
-						
+            //$('#listaComentarios').show(150);
+			$('#dejarComentario').focus();
+			$('html, body').animate({
+                    scrollTop: $("#dejarComentario").offset().top - 250
+                }, 1000);			
     });
 		    var verBoxResponder = function(id) {
         $('#respComentario-' + id).toggle();
