--- a/views/email/registro.twig
+++ b/views/email/registro.twig
@@ -1,3 +1,3 @@
-Bienvenido al portal para la “Nueva Ley del Árbol” del Gobierno de Santa Fe. 
+Bienvenido al portal para participar en las Bases para la Reforma del Gobierno de Santa Fe. 
 Ingresá a este link para confirmar tu email 
 {{ baseUrl() }}{{ urlFor('runValidUsuario',{'idUsu': id,'token': token}) }}
